; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/executor/extr_spi.c__SPI_begin_call.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/executor/extr_spi.c__SPI_begin_call.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@_SPI_current = common dso_local global %struct.TYPE_2__* null, align 8
@SPI_ERROR_UNCONNECTED = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @_SPI_begin_call to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @_SPI_begin_call(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load %struct.TYPE_2__*, %struct.TYPE_2__** @_SPI_current, align 8
  %5 = icmp eq %struct.TYPE_2__* %4, null
  br i1 %5, label %6, label %8

6:                                                ; preds = %1
  %7 = load i32, i32* @SPI_ERROR_UNCONNECTED, align 4
  store i32 %7, i32* %2, align 4
  br label %17

8:                                                ; preds = %1
  %9 = load i32, i32* %3, align 4
  %10 = icmp ne i32 %9, 0
  br i1 %10, label %11, label %16

11:                                               ; preds = %8
  %12 = call i32 (...) @GetCurrentSubTransactionId()
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** @_SPI_current, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 4
  %15 = call i32 (...) @_SPI_execmem()
  br label %16

16:                                               ; preds = %11, %8
  store i32 0, i32* %2, align 4
  br label %17

17:                                               ; preds = %16, %6
  %18 = load i32, i32* %2, align 4
  ret i32 %18
}

declare dso_local i32 @GetCurrentSubTransactionId(...) #1

declare dso_local i32 @_SPI_execmem(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
